<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rubenhoebee.aps_v04.ReadSensors">

    <TextView
        android:text="@string/NoValue"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yPos"
        android:layout_alignLeft="@+id/yPos"
        android:layout_alignStart="@+id/yPos"
        android:id="@+id/zPos" />

    <TextView
        android:text="@string/NoValue"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/yPos"
        android:layout_below="@+id/xPos"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/Coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/Ping"
        android:layout_alignLeft="@+id/xPos"
        android:layout_alignStart="@+id/xPos" />

    <TextView
        android:text="@string/NoValue"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/xPos"
        android:layout_below="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/NoValue"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/zAngle"
        android:layout_below="@+id/yAngle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/NoValue"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/yAngle"
        android:layout_below="@+id/xAngle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/NoValue"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/xAngle"
        android:layout_below="@+id/textView11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/Angles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_below="@+id/zPos"
        android:layout_alignLeft="@+id/zPos"
        android:layout_alignStart="@+id/zPos" />

    <TextView
        android:text="Ping:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TxtView"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/Ping"
        android:layout_width="30dp"
        android:textAlignment="textStart"
        android:text="@string/NoValue"
        android:layout_toRightOf="@+id/TxtView"
        android:layout_toEndOf="@+id/TxtView"
        android:layout_gravity="start"/>

    <TextView
        android:text="@string/Speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zAngle"
        android:layout_alignLeft="@+id/zAngle"
        android:layout_alignStart="@+id/zAngle" />

    <TextView
        android:text="@string/NoValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rSpeed"
        android:layout_below="@+id/zAngle"
        android:layout_toRightOf="@+id/textView11"
        android:layout_toEndOf="@+id/textView11" />

    <TextView
        android:text="@string/YAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12" />

    <TextView
        android:text="@string/XAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:background="@drawable/round_button_states"
        android:id="@+id/DeadBtn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/Deadmansswitch"
        android:padding="15dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/XAngle"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView12"
        android:layout_toEndOf="@+id/textView12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/YAngle"
        android:layout_below="@+id/textView12"
        android:layout_toRightOf="@+id/textView12"
        android:layout_toEndOf="@+id/textView12" />

</RelativeLayout>
